Changes for 2.0.10rc1

New features:
..F....... [ZBX-7103] improved loading speed of tr_events.php page (Sasha)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Czech, Dutch, German, Hungarian, Japanese, Italian, Romanian and Slovak translations; thanks to Zabbix translators (Richlv)

Bug fixes:
.......PS. [ZBX-6835] fixed bug when agent/proxy connection error could have resulted in a wrong warning about message size (wiper)
A.F....... [ZBX-6760] improved performance of getting global scripts (Sasha)
........S. [ZBX-7151] limited alert message and items parameter length to 2048 characters when working with Oracle and DB2 databases (wiper)
...G...... [ZBX-6591] fixed resolution of IPv4 and IPv6 addresses if DNS hostname is specified as server parameter in configuration file; thanks to Trever L. Adams for patch (igors)
........S. [ZBX-7133] fixed processing of zabbix[host,*,available] item; fixed proxy's hosts availability data on server (Sasha)
..F....... [ZBX-7112] improved file import validation for graph items (Eduard)
A......... [ZBX-7101] fixed generated SQL queries in action.get method when simultaneously selecting more than one condition and operation (Ivo)
..F....... [ZBX-7074] fixed incorrectly parsed trigger expression in trigger wizard (Vitalij)
A.F....... [ZBX-5735] fixed debug mode check condition to use less memory when debug is off (Ivo)

--------------------------------------------------------------------------------
Changes for 2.0.9

2.0.9rc2 was released as 2.0.9 without any changes

--------------------------------------------------------------------------------
Changes for 2.0.9rc2

Bug fixes:
..F....... [ZBX-7036] fixed "Discovery status" widget being displayed on top of a customized dashboard when enabling a discovery rule (Pavels)
..F....... [ZBX-3878] fixed not being able to move dashboard widget the second time (Ivo)

--------------------------------------------------------------------------------
Changes for 2.0.9rc1

New features: